hide scroll and fix ui

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,3 +82,12 @@ body {
 .reviewBackgrounfColor {
   background-color: #C5F9EC;
 }
+
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none; /* Hide scrollbar for Chrome, Safari, and Opera */
+}
+
+.scrollbar-hidden {
+  -ms-overflow-style: none; /* Hide scrollbar for Internet Explorer and Edge */
+  scrollbar-width: none; /* Hide scrollbar for Firefox */
+}
